--- a/mainstyle.css
+++ b/mainstyle.css
@@ -225,32 +225,65 @@ a.logo:active{
 }
 
 .container_2{
-    margin: 0;
     width: 100%;
     height: 100%;
+    padding-top: 5.5rem;
 }
 
 .inside_container_2{
     text-align: center;
     padding-top: 5rem;
     padding-bottom: 5rem;
-    padding-left: 7rem;
-    padding-right: 7rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     display: flex;
-    column-gap: 3rem;/*malay ko*/
+}
+
+#title_project{
+    height: 1000px;
+}
+
+#inside_title_project{
+    top: 10rem;
+    left: 0px;
+    position: sticky;
+    height: 16vh;
+    padding: 1.5rem;
+    background-color: #ff4d00;
+    border-radius: 4%;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
 }
 
 .myproject_items{
     display: flex;
     flex-wrap: wrap;
+    box-sizing: border-box;
+    align-items: stretch;
     padding-left: 5rem;
-    padding-right: 5rem;
-    column-gap: 2rem;
+    row-gap: 10px;
 }
 .project_items{
-    flex-grow: 1;
-    flex-basis: 200;
+    display: block;
+    width: 50%;
+    
 }
+.inside_project_items{
+    width: 80%;
+    padding: 1rem;
+    background-color: #ff4d00;
+    border-radius: 2%;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+}
+.box_1{
+    width: 100%;
+    cursor: pointer;
+}
+.box_1 img{
+    width: 100%;
+    border-radius: 1%;
+}
+
+
 
 .inside_container_2 h1{
     font-size: 2.5rem;
