--- a/mainstyle.css
+++ b/mainstyle.css
@@ -131,7 +131,6 @@ body.dont_scroll{
 .profile_img{
     width: 100%;
     height: 100%;
-    
 }
 
 .profile_img_inside{
@@ -167,7 +166,7 @@ body.dont_scroll{
     text-align: center;
     position: relative;
     top: 9rem;
-    width: calc(50% - 150px);
+    width: calc(100% - 150px);
     left: 50%;
     transform: translateX(-50%);
 }
@@ -179,6 +178,14 @@ body.dont_scroll{
 .myName h2{
     font-size: 2.5rem;
     color: rgb(68, 68, 68);
+}
+
+@media(max-width: 1200px){
+    .myName1{
+        
+        
+    }
+    
 }
 
 .ClickMe{
@@ -237,6 +244,7 @@ a.logo:active{
     padding-left: 2rem;
     padding-right: 2rem;
     display: flex;
+    height: 100%;
 }
 
 #title_project{
@@ -249,7 +257,7 @@ a.logo:active{
     position: sticky;
     height: 16vh;
     padding: 1.5rem;
-    background-color: #ff4d00;
+    background: #ff4d00;
     border-radius: 4%;
     height: 100px;
     box-shadow: 0 10px 10px rgba(0,0,0,0.2);
@@ -262,17 +270,18 @@ a.logo:active{
     align-items: stretch;
     margin-top: 0;
     width: calc(100% - 480px);
-    background-color: aqua;
+    height: 100%;
+    /* background-color: aqua; */
     margin-left: 5rem;
     column-gap: 5rem;
 }
 .project_items{
     display: block;
     width: 60vh; /*make the boxes looking mobile 100%*/
-    height: 50vh;
+    height: 100%;
     margin: 0 0 2em 0;
     padding: 1em; 
-    background-color: #ff4d00;
+    background: #ff4d00;
     border-radius: 2%;
 }
 
@@ -313,16 +322,14 @@ a.logo:active{
         .project_items{
         width: 40%;
         height: 20vw;
-    }
-    .myproject_items{
-        height: 50vw;
-    }
+        }
+    
     }
     @media(max-width: 1400px){
         .project_items{
         width: 50vw;
         height: 30vw;
-    }
+        }
     }
     @media(max-width: 1200px){
         .inside_container_2{
@@ -330,12 +337,14 @@ a.logo:active{
         }
         #inside_title_project{
         top: 0px;
-        left: 0px;
+        left: 50%;
+        transform: translate(-50%, -50%);
         position: relative;
+        width: 50%;
         height: 16vh;
         padding: 1.5rem;
-        background-color: #ff4d00;
-        border-radius: 4%;
+        background: #ff4d00;;
+        border-radius: 2%;
         height: 100px;
         box-shadow: 0 10px 10px rgba(0,0,0,0.2);
         }
@@ -343,16 +352,14 @@ a.logo:active{
         height: 190px;
         }
         .myproject_items{
-        width: 70vw;
-        position: relative;
-        left: 50px;  
-        transform: translate(-1%, 15%);
+        width: calc(100% - 120px);
         }
         .project_items{
         width: 100vw; /*make the boxes looking mobile 100%*/
-        height: 40vw;
+        height: 50vw;
         position: relative;
         }
+        
         
     }
 }
@@ -384,7 +391,7 @@ a.logo:active{
     position: absolute;
     top: 1rem;
     right: 2rem;
-    color: rgb(255, 106, 0);
+    color: #ff4d00;
 }
 
 .contactme_container{
@@ -395,5 +402,43 @@ a.logo:active{
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
+    background-color: rgb(67, 68, 68);
+}
+.footer p{
+    color: aliceblue;
 }
 
+
+/* mobile */
+
+
+
+@media(max-width: 425px){
+        
+        .myproject_items{
+            width: 100%;
+            height: 100%;
+            position: relative;
+            left: 30%;
+            padding-left: 2rem;
+            padding-right: 2rem;
+            transform: translate(-50%, -5%);
+        }
+        .project_items{
+            width: 100%;
+            height: 70vw;
+        }
+        #inside_title_project{
+        top: 0px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        position: relative;
+        width: 100%;
+        height: 16vh;
+        padding: 1.5rem;
+        background: #ff4d00;;
+        border-radius: 2%;
+        height: 100px;
+        box-shadow: 0 10px 10px rgba(0,0,0,0.2);  
+        }
+}
