--- a/mainstyle.css
+++ b/mainstyle.css
@@ -414,5 +414,21 @@ a.logo:active{
 
 
 @media(max-width: 425px){
+        .inside_container_2{
+            align-items: center;
+        }
         
+        #inside_title_project{
+        top: 0px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        position: relative;
+        width: 100%;
+        height: 16vh;
+        padding: 1.5rem;
+        background: #ff4d00;;
+        border-radius: 2%;
+        height: 100px;
+        box-shadow: 0 10px 10px rgba(0,0,0,0.2);  
+        }
 }
