--- a/mainstyle.css
+++ b/mainstyle.css
@@ -245,6 +245,7 @@ a.logo:active{
     padding-right: 2rem;
     display: flex;
     height: 100%;
+    column-gap: 5rem;
 }
 
 #title_project{
@@ -269,10 +270,10 @@ a.logo:active{
     box-sizing: border-box;
     align-items: stretch;
     margin-top: 0;
+    margin-left: -2.5rem;
     width: calc(100% - 480px);
     height: 100%;
-    /* background-color: aqua; */
-    margin-left: 5rem;
+    background-color: aqua;
     column-gap: 5rem;
 }
 .project_items{
@@ -303,68 +304,67 @@ a.logo:active{
 
 @media(max-width: 1800px){
     .project_items{
-        width: 55vh;
-        height: 50vh;
+        width: 50vh;
     }
-    @media(max-width: 1700px){
-        .project_items{
-        width: 48vh;
-        height: 40vh;
-    }  
+}
+@media(max-width: 1620px){
+    .project_items{
+        width: 45vh;
     }
-    @media(max-width: 1600px){
-        .project_items{
-        width: 43vh;
-        height: 39vh;
-    }
-    }
-    @media(max-width: 1600px){
-        .project_items{
-        width: 40%;
-        height: 20vw;
-        }
-    
-    }
-    @media(max-width: 1400px){
-        .project_items{
-        width: 50vw;
-        height: 30vw;
-        }
-    }
-    @media(max-width: 1200px){
-        .inside_container_2{
-            display: block;
-        }
-        #inside_title_project{
-        top: 0px;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        position: relative;
-        width: 50%;
-        height: 16vh;
-        padding: 1.5rem;
-        background: #ff4d00;;
-        border-radius: 2%;
-        height: 100px;
-        box-shadow: 0 10px 10px rgba(0,0,0,0.2);
-        }
-        #title_project{
-        height: 190px;
-        }
-        .myproject_items{
-        width: calc(100% - 120px);
-        }
-        .project_items{
-        width: 100vw; /*make the boxes looking mobile 100%*/
-        height: 50vw;
-        position: relative;
-        }
-        
-        
+}
+@media(max-width: 1550px){
+    .project_items{
+        width: 35vh;
     }
 }
 
+@media(max-width: 1450px){
+    .project_items{
+        width: 100%;
+    }
+    .inside_container_2{
+        column-gap: 10rem;
+    }
+}
 
+@media(max-width: 1250px){
+    .project_items{
+        width: 100%;
+    }
+    .inside_container_2{
+        column-gap: 7rem;
+    }
+}
+
+@media(max-width: 1100px){
+    .inside_container_2{
+        display: block;
+        position: relative;
+    }
+    #title_project{
+        height: 15rem;
+    }
+    #inside_title_project{
+    position: unset;
+    height: 16vh;
+    padding: 1.5rem;
+    background: #ff4d00;
+    border-radius: 2%;
+    height: 100px;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+    }
+    .myproject_items{
+        margin-left: 1%;
+        justify-content: center;
+        width: calc(100% - 10px);
+    }
+    .project_items{
+        width: 100%;
+    }
+    .inside_container_2{
+        column-gap: 7rem;
+    }
+}
 
 
 
@@ -414,21 +414,7 @@ a.logo:active{
 
 
 @media(max-width: 425px){
-        .inside_container_2{
-            align-items: center;
-        }
-        
-        #inside_title_project{
-        top: 0px;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        position: relative;
-        width: 100%;
-        height: 16vh;
-        padding: 1.5rem;
-        background: #ff4d00;;
-        border-radius: 2%;
-        height: 100px;
-        box-shadow: 0 10px 10px rgba(0,0,0,0.2);  
-        }
+        #title_project{
+        height: 13rem;
+    }
 }
