--- a/mainstyle.css
+++ b/mainstyle.css
@@ -5,7 +5,7 @@ body{
 }
 
 .nav_bar{
-    width: 100%;/* 80% */
+    width: calc(100% - 150px);/* 80% */
     /* left: 50% */
     /* transform: translateX(-50%); */
     background-color: rgb(67, 68, 68);
@@ -25,6 +25,7 @@ body{
 }
 
 .inside_navbar{ 
+    position: relative;
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(4, minmax(0, 1fr));
