--- a/mainstyle.css
+++ b/mainstyle.css
@@ -169,9 +169,11 @@ body.dont_scroll{
     text-align: center;
     justify-content: center;
 }
-.text_inside_container_1 h2{
+.ello{
     font-size: 2.5rem;
-    color: rgb(67, 68, 68);
+}
+.imed{
+    font-size: 2.5rem;
 }
 
 .ClickMe{
@@ -356,13 +358,15 @@ body.dont_scroll{
         column-gap: 3rem;
         padding: 1rem;
     }
-    .text_inside_container_1 h2{
-        
+    .ello{
+        font-size: 2rem;
+    }
+    .imed{
         font-size: 1.5rem;
     }
     .AboutMe{
         padding-top: 1rem;
-        width: calc(100% - 100px);
+        width: calc(100% - 20px);
     }
     #title_project{
         height: 13rem;
