--- a/mainstyle.css
+++ b/mainstyle.css
@@ -96,11 +96,6 @@ a.boxs1:active{
 }
 
 
-
-
-
-
-
 body.dont_scroll{
     overflow: hidden;
 }
@@ -132,7 +127,7 @@ body.dont_scroll{
 
 .container_1{
     margin-top: 0;
-    height: calc(50% - 145px);
+    height: calc(50% - 120px);
     width: 100%;
     background-color: rgb(255, 255, 255);
     display: flex;
@@ -216,6 +211,7 @@ body.dont_scroll{
 .container_2{
     width: 100%;
     height: 100%;
+
 }
 
 .inside_container_2{
@@ -227,6 +223,22 @@ body.dont_scroll{
     display: flex;
     height: 100%;
     column-gap: 5rem;
+}
+
+.myproj_title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(50% - 400px);
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ff4d00;
+    border-radius: 6px;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+}
+.myproj{
+    font-size: 2.5rem;
+    color: white;
 }
 
 #title_project{
