https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -211,76 +211,60 @@ body.dont_scroll{
 .container_2{
     width: 100%;
     height: 100%;
-
+    background-color: rgb(75, 97, 97);
 }
 
 .inside_container_2{
     text-align: center;
     padding-top: 5rem;
     padding-bottom: 5rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
     display: flex;
-    height: 100%;
-    column-gap: 5rem;
+    flex-direction: column;
 }
-
-.myproj_title{
-    display: flex;
+.title_project{
     justify-content: center;
+    width: calc(500px - 10px);
     align-items: center;
-    width: calc(50% - 400px);
+    display: flex;
+    flex-direction: column;  
     margin-left: auto;
     margin-right: auto;
-    background-color: #ff4d00;
-    border-radius: 6px;
-    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
 }
-.myproj{
-    font-size: 2.5rem;
-    color: white;
-}
-
 #title_project{
-    height: 1000px;
+    height: 200px;
 }
 
 #inside_title_project{
-    top: 10rem;
-    left: 0px;
+    top: 50rem;
     position: sticky;
-    height: 16vh;
-    padding: 1.5rem;
+    padding: 0.5rem;
     background: #ff4d00;
     border-radius: 4%;
     height: 100px;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-shadow: 0 10px 10px rgba(0,0,0,0.2);
 }
 
-.myproject_items{
-    display: flex;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    align-items: stretch;
-    margin-top: 0;
-    margin-left: 2.5rem;
-    width: calc(100% - 480px);
-    height: 100%;
-    /* background-color: aqua; */
-    column-gap: 5rem;
+.myproj_title{
+    color: white;
+    font-size: 2rem;
+    font-weight: 700;
 }
-.project_items{
-    display: block;
-    width: 60vh; /*make the boxes looking mobile 100%*/
-    height: 100%;
-    margin: 0 0 2em 0;
-    padding: 1em; 
-    /* background: #ff4d00; */
-    border-radius: 2%;
+
+.project1{
+    margin-top: 3rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+    width: calc(100% - 40px);
+    margin-left: auto;
+    margin-right: auto;
 }
-.project_items h2{
-    color: rgb(68, 68, 68);
-}
+
+
 
 
 .box_1{
@@ -369,6 +353,7 @@ body.dont_scroll{
 
 @media(max-width: 768px){
     /* Container_1 */
+
     .text_inside_container_1{
         display: grid;
         column-gap: 3rem;
