--- a/mainstyle.css
+++ b/mainstyle.css
@@ -211,7 +211,7 @@ body.dont_scroll{
 .container_2{
     width: 100%;
     height: 100%;
-    background-color: rgb(75, 97, 97);
+    background-color: rgb(34, 148, 148);
 }
 
 .inside_container_2{
@@ -221,49 +221,48 @@ body.dont_scroll{
     display: flex;
     flex-direction: column;
 }
-.title_project{
-    justify-content: center;
-    width: calc(500px - 10px);
-    align-items: center;
-    display: flex;
-    flex-direction: column;  
-    margin-left: auto;
-    margin-right: auto;
-}
-#title_project{
-    height: 200px;
-}
-
-#inside_title_project{
-    top: 50rem;
-    position: sticky;
-    padding: 0.5rem;
-    background: #ff4d00;
-    border-radius: 4%;
-    height: 100px;
-    width: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
-}
-
 .myproj_title{
-    color: white;
-    font-size: 2rem;
-    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    background-color: rgb(255, 106, 0);
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    border-radius: 6px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
 }
-
-.project1{
-    margin-top: 3rem;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
-    width: calc(100% - 40px);
+.myproj_title h2{
+    color: white;
+}
+.myproj_{
+    margin-top: 1.5rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;  
+}
+.myproj_img{
+    background-color: rgb(255, 106, 0);
+    padding: 1rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    display: flex;
+    flex-direction: column;
+}
+.myproj_img1{
+    width: 85%;
     margin-left: auto;
     margin-right: auto;
 }
-
+.myproj_img1 img{
+    width: 100%;
+}
 
 
 
@@ -353,7 +352,19 @@ body.dont_scroll{
 
 @media(max-width: 768px){
     /* Container_1 */
-
+    .myproj_img{
+    background-color: rgb(255, 106, 0);
+    padding: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+.myproj_img1{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
     .text_inside_container_1{
         display: grid;
         column-gap: 3rem;
