--- a/mainstyle.css
+++ b/mainstyle.css
@@ -247,21 +247,33 @@ body.dont_scroll{
     margin-left: auto;
     margin-right: auto;  
 }
-.myproj_img{
-    background-color: rgb(255, 106, 0);
-    padding: 1rem;
-    margin-left: 5rem;
-    margin-right: 5rem;
+.inside_proj_1{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+}
+.myproj_img{
+    
+    padding: 1rem;
+    margin-left: 10%;
+    margin-right: 10%;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+
 }
 .myproj_img1{
-    width: 85%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
 }
 .myproj_img1 img{
+    border-style: solid;
+    border-color: rgb(255, 106, 0);
+    border-width: 0.9rem;
+    border-radius: 6px;
     width: 100%;
+    height: 100%;
 }
 
 
@@ -352,8 +364,16 @@ body.dont_scroll{
 
 @media(max-width: 768px){
     /* Container_1 */
+    .myproj_img1 img{
+    border-style: solid;
+    border-color: rgb(255, 106, 0);
+    border-width: 0.4rem;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+}
     .myproj_img{
-    background-color: rgb(255, 106, 0);
+    
     padding: 0.5rem;
     margin-left: 1rem;
     margin-right: 1rem;
