--- a/mainstyle.css
+++ b/mainstyle.css
@@ -199,6 +199,7 @@ body.dont_scroll{
     margin-right: auto;
     justify-content: center;
     width: calc(100vh - 300px);
+    text-align: left;
 }
 .AboutMe p{
     font-size: 1.3rem;
@@ -253,21 +254,20 @@ body.dont_scroll{
     justify-content: center;
 }
 .myproj_img{
-    
     padding: 1rem;
     margin-left: 10%;
     margin-right: 10%;
     display: flex;
     height: 100%;
     flex-direction: column;
-
 }
+
 .myproj_img1{
     width: 70%;
     margin-left: auto;
     margin-right: auto;
 }
-.myproj_img1 img{
+.inside_proj_1 img{
     border-style: solid;
     border-color: rgb(255, 106, 0);
     border-width: 0.9rem;
@@ -275,7 +275,45 @@ body.dont_scroll{
     width: 100%;
     height: 100%;
 }
-
+.myproj_img1 h2{
+    color: rgb(68, 68, 68);
+    font-size: 2rem;
+}
+.description_proj{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+}
+.description_proj p{
+    color: rgb(68, 68, 68);
+    font-size: 1.2rem;
+}
+.proj_btn{
+    display: flex;
+    justify-content: left;
+    justify-content: space-between;
+    margin-right: auto;
+    
+}
+.proj_btn a{
+    text-align: center;
+    color: rgb(68, 68, 68);
+    text-decoration: none;
+    width: 8rem;
+    margin: 0 5px 0 0;
+    padding: 0.5rem;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 6px;
+    border-color: rgb(68, 68, 68);
+}
+.proj_btn a:hover{
+    background-color: rgb(255, 106, 0);
+    color: white;
+    border-color: rgb(255, 106, 0);
+    transition: 0.3s;
+}
 
 
 .box_1{
@@ -364,7 +402,7 @@ body.dont_scroll{
 
 @media(max-width: 768px){
     /* Container_1 */
-    .myproj_img1 img{
+    .inside_proj_1 img{
     border-style: solid;
     border-color: rgb(255, 106, 0);
     border-width: 0.4rem;
