--- a/mainstyle.css
+++ b/mainstyle.css
@@ -278,6 +278,8 @@ body.dont_scroll{
 .myproj_img1 h2{
     color: rgb(68, 68, 68);
     font-size: 2rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2rem;
 }
 .description_proj{
     display: flex;
@@ -402,24 +404,8 @@ body.dont_scroll{
 
 @media(max-width: 768px){
     /* Container_1 */
-    .inside_proj_1 img{
-    border-style: solid;
-    border-color: rgb(255, 106, 0);
-    border-width: 0.4rem;
-    border-radius: 6px;
-    width: 100%;
-    height: 100%;
-}
-    .myproj_img{
-    padding: 0.5rem;
-    display: flex;
-    flex-direction: column;
-}
-.myproj_img1{
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-}
+
+    
     .text_inside_container_1{
         display: grid;
         column-gap: 3rem;
@@ -468,4 +454,28 @@ body.dont_scroll{
     }
 
     /* Container_2 */
+    .inside_proj_1 img{
+    border-style: solid;
+    border-color: rgb(255, 106, 0);
+    border-width: 0.4rem;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+}
+    .myproj_img{
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+}
+.myproj_img1{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+    .myproj_img1 h2{
+    color: rgb(68, 68, 68);
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+    }
 }
