--- a/mainstyle.css
+++ b/mainstyle.css
@@ -42,10 +42,18 @@ body{
     justify-content: center;
     text-align: center;
 }
+.koc h3{
+    font-size: 10rem;
+}
+
 
 .box1.nav_active{
     display: flex;
 }
+.inside_box1{
+    display: grid;
+}
+
 .hamburger{
     display: none;
     flex-direction: column;
@@ -93,6 +101,21 @@ a.boxs1:active{
 
 .box1{
     text-align: center;
+}
+
+.koma{
+    display: flex;
+    column-gap: 0.5rem;
+    justify-content: center;
+    text-align: center;
+}
+.koma i{
+    display: flex;
+    align-items: center;
+}
+.koma h2{
+    display: flex;
+    align-items: center;
 }
 
 
@@ -200,6 +223,7 @@ body.dont_scroll{
     justify-content: center;
     width: calc(100vh - 300px);
     text-align: left;
+    width: 70%;
 }
 .AboutMe p{
     font-size: 1.3rem;
@@ -207,7 +231,11 @@ body.dont_scroll{
     line-height: 1.6;
     font-weight: 500;
 }
-
+@media(min-width: 1200px){
+    .AboutMe{
+        width: 50rem;
+    }
+}
 
 .container_2{
     width: 100%;
@@ -217,7 +245,7 @@ body.dont_scroll{
 
 .inside_container_2{
     text-align: center;
-    padding-top: 5rem;
+    padding-top: 10rem;
     padding-bottom: 5rem;
     display: flex;
     flex-direction: column;
@@ -279,7 +307,7 @@ body.dont_scroll{
     color: rgb(68, 68, 68);
     font-size: 2rem;
     margin-top: 2.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 2rem; /* king ina bat di ka gumagana*/
 }
 .description_proj{
     display: flex;
@@ -314,7 +342,7 @@ body.dont_scroll{
     background-color: rgb(255, 106, 0);
     color: white;
     border-color: rgb(255, 106, 0);
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 
@@ -383,8 +411,49 @@ body.dont_scroll{
     color: #ff4d00;
 }
 
-.contactme_container{
-    padding: 30px;
+.container_3{
+    width: 100%;
+    height: 150vh;
+    background-color: antiquewhite;
+}
+.inside_container_3{
+    text-align: center;
+    padding-top: 10rem;
+    padding-bottom: 5rem;
+    display: flex;
+    flex-direction: column;
+}
+.mycont_tile{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    background-color: rgb(255, 105, 0);
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    border-radius: 6px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+}
+.mycont_tile h2{
+    color: white;
+}
+
+.nav_container{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.itembox{
+    background-color: aqua;
+}
+.itembox1{
+    background-color: blanchedalmond;
 }
 
 .footer{
@@ -432,26 +501,20 @@ body.dont_scroll{
     .container_1{
         height: calc(50% - 280px);
     }
-    .inside_navbar{
-        position: absolute;
-        top: 60px;
-        right: 0;
-        background: #007bff;
-        flex-direction: column;
-        width: 200px;
+    .koma h2{
         display: none;
-        padding: 10px 0;
     }
-    .inside_navbar.nav_active{
-        display: flex;
+    a.boxs1{
+        width: 30px;
+        
     }
-    .hamburger{
-        display: flex;
-    }
-
+    
+    
+    
     .profile_pic img{
         width: 150px;
     }
+    
 
     /* Container_2 */
     .inside_proj_1 img{
