--- a/mainstyle.css
+++ b/mainstyle.css
@@ -576,11 +576,11 @@ body.dont_scroll{
     color: aliceblue;
 }
 
-
+/* Testing */
 /* Laptop */
 @media(min-width: 1024px){
 .spaces{
-    height: 130px;
+    height: 131px;
 }
 
 .profile_pic img{
