--- a/mainstyle.css
+++ b/mainstyle.css
@@ -576,7 +576,7 @@ body.dont_scroll{
     color: aliceblue;
 }
 
-/* Testing nga po */
+/* Testing nga po plss */
 /* Laptop */
 @media(min-width: 1024px){
 .spaces{
