https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -594,8 +594,8 @@ body.dont_scroll{
 
 
 }
-/* Pa tesing nga pleasesss */
-/* Mobile */
+
+/* Mobilehgtrhrthr */
 @media(max-width: 768px){
     /* Container_1 */
 
