my first commit

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -595,7 +595,12 @@ body.dont_scroll{
 
 }
 
+
 /* Mobilehgtrhrthr */
+
+/* Pa tesing nga please */
+/* Mobile */
+
 @media(max-width: 768px){
     /* Container_1 */
 
