--- a/mainstyle.css
+++ b/mainstyle.css
@@ -594,7 +594,7 @@ body.dont_scroll{
 
 
 }
-/* Pa tesing nga pleasessss */
+/* Pa tesing nga pleasesssss */
 /* Mobile */
 
 @media(max-width: 768px){
