nag update lng ng comments

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -594,7 +594,7 @@ body.dont_scroll{
 
 
 }
-/* Pa tesing nga pleasesssss */
+/* Pa Update na ito kokokoko */
 /* Mobile */
 
 @media(max-width: 768px){
