https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -594,7 +594,7 @@ body.dont_scroll{
 
 
 }
-/* Pa Update na ito kokokoko */
+/* Pa Update na ito kokokoko kupal */
 /* Mobile */
 
 @media(max-width: 768px){
