pa try nga ulet

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -594,7 +594,7 @@ body.dont_scroll{
 
 
 }
-/* Pa Updatehtrhrhtrrh blah blah */
+/* Pa Updatehtrhrhtrrh try ko ulet kupal */
 /* Mobile */
 
 @media(max-width: 768px){
