https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -594,7 +594,7 @@ body.dont_scroll{
 
 
 }
-/* Pa Updatehtrhrhtrrh try ko ulet kupal */
+/* Pa Updatehtrhrhtrrh try ko ulet kupa */
 /* Mobile */
 
 @media(max-width: 768px){
