--- a/mainstyle.css
+++ b/mainstyle.css
@@ -594,7 +594,7 @@ body.dont_scroll{
 
 
 }
-/* Pa Updatehtrhrhtrrh try ko ulet kupa */
+/* Pa Updatehtrhrhtrrh try ko ulet kupasss */
 /* Mobile */
 
 @media(max-width: 768px){
