--- a/mainstyle.css
+++ b/mainstyle.css
@@ -123,6 +123,8 @@ body.dont_scroll{
     grid-template-columns: minmax(40%, 30%) 1fr;
 }
 
+
+
 .closebtn{
     position: absolute;
     top: 1rem;
@@ -135,9 +137,10 @@ body.dont_scroll{
     display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
     grid-auto-rows: min-content;
-    max-width: 100%;
     text-align: center;
 }
+
+
 .nav_pic img{
     margin: 1.5rem;
     width: 23vw;
@@ -301,7 +304,7 @@ body.dont_scroll{
 @media(max-width: 1300px){
     .nav_pic img{
         margin-top: 5rem;
-        width: 23rem;
+        width: 20rem;
     }
     .nav_box{
         width: 50vw;
@@ -321,21 +324,44 @@ body.dont_scroll{
     }
 }
 
-/* about us mobile version */
-@media(max-width: 1000px){
-    .nav_box{
-         
-    }
-    .nav_box1{
-          
-    }
-    .nav_box2{
-           
-    }
-    .nav_box3{
+/* mobile version of aboutme nav */
+@media(max-width: 768px){
+    .nav_aboutme{
+        display: grid;
+        grid-template-columns: 1fr;
         
     }
+    .nav_body{
+        display: grid;
+        grid-template-columns: 1fr;
+        
+    }
+    .nav_body_1{
+        overflow-y: visible;
+    }
+    .box_details{
+        justify-content: center;
+    }
+    .nav_box{
+        width: 30rem;
+        
+    }
+    .nav_box1{
+        width: 30rem;
+        
+    }
+    .nav_box2{
+        width: 30rem;
+        
+    }
+    .nav_box3{
+        width: 30rem;
+        
+    }
+    
 }
+
+
 
 
 .mainbody{
@@ -445,6 +471,7 @@ body.dont_scroll{
         width: 50rem;
     }
 }
+
 
 .container_2{
     width: 100%;
